Add formats for list command